<resources>
    <string name="app_name">메디케어</string>
    <!--    <string name="api_key_kakao_map">8aec5e053654b53f321681814502dbfd</string>-->
    <string name="naver_client_id">0qu54c39mv</string>
    <string name="naver_client_secret">9AVxBiE1spfpgc5eoXzO316ZTv9peaFvcR6r5bTQ</string>

    <string name="api_key_public_data">9kam%2BiI3ibjMnJs3msCIG%2BP7tblP9JT8113lnL25tQ1MMoDrJ%2Fml3q6uvcNgVMBJI%2FSWGQtiy70VHymbS17bgw%3D%3D</string>

    <string name="admob_app_id">ca-app-pub-2085619973553767~3542146847</string>
    <string name="admob_banner_unit_id">ca-app-pub-2085619973553767/2444687598</string>
    <string name="admob_native_unit_id">ca-app-pub-2085619973553767/5083734319</string>

    <!-- 애드몹 테스트 앱ID -->
    <string name="test_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <!-- 애드몹 테스트 배너ID -->
    <string name="test_admob_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- 애드몹 테스트 전면ID -->
    <string name="test_admob_interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- 애드몹 테스트 네이티브ID -->
    <string name="test_admob_native_unit_id">ca-app-pub-3940256099942544/2247696110</string>



    <string name="str_main_text">사용자 정보</string>

    <string name="str_bottom_menu_home">알람설정</string>
    <string name="str_bottom_menu_search">약 검색</string>
    <string name="str_bottom_menu_tv">유저목록</string>
    <string name="str_bottom_menu_user_list">유저목록</string>
    <string name="str_bottom_menu_map">약국위치</string>

    <string name="str_bottom_menu_tv_02">메디TV</string>


    <string name="str_common_01">유저 정보 등록</string>
    <string name="str_common_02">유저 목록</string>
    <string name="str_common_03">수정하기</string>
    <string name="str_common_04">유저 정보 수정</string>


    <string name="str_name">이름</string>
    <string name="str_gender">성별</string>
    <string name="str_age">연령대</string>
    <string name="str_relation">관계</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>